Update recommended JVM parameters to include ParNew.
Signed-off-by: Ross Allan <rallanpcl@gmail.com>