@@ -19,6 +19,7 @@ Updating TickThreading
 Optional - these JVM flags may improve performance
 ==========
 
-- Your start.bat/sh should look something like this (replace 8192 with the RAM the server should be allowed to use, in megabytes):
-- java -server -XX:UseSSE=4 -XX:+UseCMSCompactAtFullCollection -XX:ParallelGCThreads=6 -XX:+UseConcMarkSweepGC -XX:+DisableExplicitGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:+UseCompressedOops -XX:+AggressiveOpts -Xmx8192M -jar server.jar nogui
+- Your start.bat/sh should look something like this:
+- java -server -XX:UseSSE=4 -XX:+UseCMSCompactAtFullCollection -XX:ParallelGCThreads=6 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+DisableExplicitGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:+UseCompressedOops -XX:+AggressiveOpts -Xmx8192M -jar server.jar nogui
 - Replace the "6" in -XX:ParallelGCThreads=6 with the number of cores your server has.
+- Replace 8192 with the RAM the server should be allowed to use, in megabytes.
